# The-CPP-Programmers-Mindset

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run-docker-image.sh
Chapter-02/: CMakeLists.txt  intensity_grid_search.cpp  test_signal_intensity.cpp
Chapter-03/: Solutions.md  powers.hpp
Chapter-04/: CMakeLists.txt  CMakeLists.txt.old  gemm.cpp  test_gemm.cpp
Chapter-04/src/: CMakeLists.txt
Chapter-04/src/bench_clamp_loop/: CMakeLists.txt
Chapter-04/src/bench_gemm/: CMakeLists.txt
Chapter-04/src/bench_nearest_neighbor/: CMakeLists.txt
Chapter-04/src/bench_saxpy/: CMakeLists.txt
Chapter-04/src/cache_information/: CMakeLists.txt
Chapter-04/src/clamp_loop/: CMakeLists.txt
Chapter-04/src/gemm/: CMakeLists.txt
Chapter-04/src/my_cpuid/: CMakeLists.txt
Chapter-04/src/nearest_neighbor_functions/: CMakeLists.txt
Chapter-04/src/open_mp_demo/: CMakeLists.txt
Chapter-04/src/page_size_report/: CMakeLists.txt
Chapter-04/src/saxpy/: CMakeLists.txt
Chapter-04/src/test_gemm/: CMakeLists.txt
Chapter-05/: CMakeLists.txt  bench_container_traversal.cpp  bench_containers.h  benchmark_hash.cpp
Chapter-06/: CMakeLists.txt
Chapter-06/ctode/euler/: euler.cpp  euler.h
Chapter-06/ctode/rk4/: rk4.cpp  rk4.h
Chapter-08/: main.cpp
Chapter-09/common/: duckies_types.h
Chapter-10/: main.cpp
Chapter-12/: main.cpp
Chapter-13/: task.hpp
Chapter-14/: CMakeLists.txt  sycl_saxpy.cpp
Chapter-15/: CMakeLists.txt
tools/: .gitignore  Dockerfile  build-docker-image.sh  install-gtest.sh  prerequisites-mac.sh  prerequisites-ubuntu.sh  remove-docker-images.sh
